--- a/registered.html
+++ b/registered.html
@@ -125,7 +125,7 @@
         }
         .formRegister>button , .formLogin>button{
             border:2px solid #ffc833;
-            background-color: none;
+            background-color: #ddd;
             padding:5px 10px;
             border-radius:5px;
             font-size:14px;
